--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
       --text: #333;
       --text-light: #666;
     }
+    :root[data-theme='dark'] {
+      --primary: #ff8ec7;
+      --secondary: #7fbde9;
+      --bg: linear-gradient(135deg, #1e1e2f, #2e2e3e);
+      --glass: rgba(0, 0, 0, 0.5);
+      --text: #e0e0e0;
+      --text-light: #aaa;
+    }
     * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Poppins', sans-serif; }
     body { background: var(--bg); min-height: 100vh; overflow-x: hidden; display: flex; flex-direction: column; align-items: center; }
     header { width: 100%; padding: 20px 40px; display: flex; justify-content: space-between; align-items: center; position: fixed; top: 0; background: var(--glass); backdrop-filter: blur(10px); box-shadow: 0 8px 16px rgba(0,0,0,0.1); z-index: 10; }
@@ -24,7 +32,7 @@
     main { padding: 120px 20px 40px; max-width: 1000px; width: 100%; }
     .profile { text-align: center; margin-bottom: 40px; }
     .profile img { width: 120px; height: 120px; border-radius: 50%; border: 4px solid white; box-shadow: 0 4px 12px rgba(0,0,0,0.1); }
-    .profile h2 { margin-top: 10px; font-weight: 500; }
+    .profile h2 { margin-top: 10px; font-weight: 500; color: var(--text); }
     .profile p { color: var(--text-light); }
     .novel-card { background: var(--glass); border-radius: 20px; padding: 20px; margin: 20px 0; backdrop-filter: blur(15px); box-shadow: 0 8px 20px rgba(0,0,0,0.1); transition: transform 0.3s ease, box-shadow 0.3s ease; }
     .novel-card:hover { transform: translateY(-5px); box-shadow: 0 12px 30px rgba(0,0,0,0.15); }
