--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="manifest" href="manifest.json">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500;700&display=swap');
     :root {
       --primary: #ff8ec7;
       --secondary: #a0d8ef;
@@ -32,8 +33,8 @@
     main { padding: 120px 20px 40px; max-width: 1000px; width: 100%; }
     .profile { text-align: center; margin-bottom: 40px; }
     .profile img { width: 120px; height: 120px; border-radius: 50%; border: 4px solid white; box-shadow: 0 4px 12px rgba(0,0,0,0.1); }
-    .profile h2 { margin-top: 10px; font-weight: 500; color: var(--text); }
-    .profile p { color: var(--text-light); }
+    .profile h2 { margin-top: 10px; font-weight: 700; color: var(--primary); font-family: 'Quicksand', sans-serif; font-size: 28px; text-shadow: 2px 2px 5px rgba(0,0,0,0.1); }
+    .profile p { color: var(--text-light); font-style: italic; font-size: 15px; margin-top: 5px; }
     .about-btn { margin-top: 20px; display: inline-block; padding: 12px 25px; background: var(--secondary); color: white; border-radius: 30px; text-decoration: none; box-shadow: 0 6px 12px rgba(0,0,0,0.1); transition: background 0.3s ease, transform 0.2s ease; }
     .about-btn:hover { background: var(--primary); transform: translateY(-3px); }
     .novel-card { background: var(--glass); border-radius: 20px; padding: 20px; margin: 20px 0; backdrop-filter: blur(15px); box-shadow: 0 8px 20px rgba(0,0,0,0.1); transition: transform 0.3s ease, box-shadow 0.3s ease; }
@@ -54,8 +55,8 @@
 <main>
   <div class="profile">
     <img src="icon-192x192.png" alt="Avatar">
-    <h2>Fathur</h2>
-    <p>belajar melalui genangan air</p>
+    <h2>✨ Fathur ✨</h2>
+    <p>belajar melalui genangan air 🌸</p>
     <a href="#about" class="about-btn">Tentang Aku 🌸</a>
   </div>
   <div class="novel-card"><h3>🌸 Judul Novel 1</h3><p>Petualangan lucu dan menegangkan di dunia fantasi yang penuh keajaiban.</p><button class="share-btn" onclick="shareNovel('Judul Novel 1', '#')">Bagikan</button></div>
