--- a/index.html
+++ b/index.html
@@ -34,7 +34,37 @@
     .novel-card h3 { color: var(--primary); font-weight: 600; margin-bottom: 10px; }
     .novel-card p { color: var(--text-light); }
     footer { margin: 30px 0; color: var(--text-light); }
-  </style>
+  
+.music-control {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background: var(--glass);
+  backdrop-filter: blur(10px);
+  padding: 10px 20px;
+  border-radius: 30px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+  cursor: pointer;
+  color: var(--primary);
+  font-weight: 600;
+  transition: background 0.3s ease;
+}
+.music-control:hover {
+  background: var(--primary);
+  color: white;
+}
+
+
+[data-theme="dark"] {
+  --primary: #ff66a3;
+  --secondary: #77bce4;
+  --bg: linear-gradient(135deg, #1e1e1e, #3a3a3a);
+  --glass: rgba(50, 50, 50, 0.6);
+  --text: #f5f5f5;
+  --text-light: #cfcfcf;
+}
+
+</style>
 </head>
 <body>
 <header>
@@ -62,5 +92,41 @@
   function toggleDarkMode() { const current = document.documentElement.getAttribute('data-theme'); const next = current === 'dark' ? 'light' : 'dark'; document.documentElement.setAttribute('data-theme', next); localStorage.setItem('theme', next); }
   (function () { const saved = localStorage.getItem('theme') || 'light'; document.documentElement.setAttribute('data-theme', saved); })();
 </script>
+
+<audio id="bg-music" autoplay loop hidden>
+  <source src="music.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+<div class="music-control" onclick="toggleMusic()">
+  🎶 <span id="music-status">Pause</span>
+</div>
+<script>
+  const music = document.getElementById('bg-music');
+  const status = document.getElementById('music-status');
+  function toggleMusic() {
+    if (music.paused) {
+      music.play();
+      status.innerText = 'Pause';
+    } else {
+      music.pause();
+      status.innerText = 'Play';
+    }
+  }
+</script>
+
+
+<script>
+  function toggleDarkMode() {
+    const currentTheme = document.documentElement.getAttribute('data-theme');
+    const nextTheme = currentTheme === 'dark' ? 'light' : 'dark';
+    document.documentElement.setAttribute('data-theme', nextTheme);
+    localStorage.setItem('theme', nextTheme);
+  }
+  (function () {
+    const savedTheme = localStorage.getItem('theme') || 'light';
+    document.documentElement.setAttribute('data-theme', savedTheme);
+  })();
+</script>
+
 </body>
 </html>
