--- a/index.html
+++ b/index.html
@@ -64,12 +64,51 @@
   --text-light: #cfcfcf;
 }
 
+
+:root {
+  --primary: #ff8ec7;
+  --secondary: #a0d8ef;
+  --bg: linear-gradient(135deg, #dff1ff, #f5e1ff);
+  --glass: rgba(255, 255, 255, 0.4);
+  --text: #333;
+  --text-light: #666;
+}
+[data-theme='dark'] {
+  --primary: #ffa4d4;
+  --secondary: #7ab8d8;
+  --bg: linear-gradient(135deg, #1c1c1c, #333);
+  --glass: rgba(0, 0, 0, 0.4);
+  --text: #eee;
+  --text-light: #aaa;
+}
+
+
+.social-media {
+  text-align: center;
+  margin: 20px 0;
+}
+.social-media a {
+  display: inline-block;
+  background: var(--primary);
+  color: white;
+  padding: 10px 20px;
+  border-radius: 30px;
+  text-decoration: none;
+  margin: 5px;
+  transition: background 0.3s ease, transform 0.2s ease;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+}
+.social-media a:hover {
+  background: var(--secondary);
+  transform: translateY(-3px);
+}
+
 </style>
 </head>
 <body>
 <header>
   <h1>Novel Kawaii</h1>
-  <button class="toggle-theme" onclick="toggleDarkMode()">🌙 Mode</button>
+  <button class="toggle-theme" onclick="toggleDarkMode()"></button>
 </header>
 <main>
   <div class="profile">
@@ -86,6 +125,11 @@
     <h3>🌼 Judul Novel 2</h3>
     <p>Kisah cinta rahasia di antara para penyihir dan makhluk ajaib.</p>
   </a>
+
+<div class="social-media">
+  <a href="https://instagram.com/username" target="_blank">📷 Instagram @username</a>
+</div>
+
 </main>
 <footer>&copy; 2025 Novel Kawaii | All rights reserved</footer>
 <script>
@@ -126,6 +170,45 @@
     const savedTheme = localStorage.getItem('theme') || 'light';
     document.documentElement.setAttribute('data-theme', savedTheme);
   })();
+</script>
+
+
+<audio id="bg-music" autoplay loop hidden>
+  <source src="music.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+<div class="music-control" onclick="toggleMusic()">
+  🎶 <span id="music-status">Pause</span>
+</div>
+<script>
+  const music = document.getElementById('bg-music');
+  const status = document.getElementById('music-status');
+  function toggleMusic() {
+    if (music.paused) {
+      music.play();
+      status.innerText = 'Pause';
+    } else {
+      music.pause();
+      status.innerText = 'Play';
+    }
+  }
+</script>
+
+
+<script>
+  const themeToggle = document.querySelector('.toggle-theme');
+  const root = document.documentElement;
+  const savedTheme = localStorage.getItem('theme') || 'light';
+  root.setAttribute('data-theme', savedTheme);
+  themeToggle.innerText = savedTheme === 'dark' ? '☀️ Light Mode' : '🌙 Dark Mode';
+
+  function toggleDarkMode() {
+    const currentTheme = root.getAttribute('data-theme');
+    const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
+    root.setAttribute('data-theme', newTheme);
+    localStorage.setItem('theme', newTheme);
+    themeToggle.innerText = newTheme === 'dark' ? '☀️ Light Mode' : '🌙 Dark Mode';
+  }
 </script>
 
 </body>
