--- a/index.html
+++ b/index.html
@@ -103,6 +103,38 @@
   transform: translateY(-3px);
 }
 
+
+.novel-list {
+  padding: 20px;
+  text-align: center;
+}
+.novel-list h2 {
+  font-family: 'Comic Sans MS', cursive;
+  color: var(--primary);
+}
+.novel-list ul {
+  list-style: none;
+  padding: 0;
+}
+.novel-list li {
+  margin: 10px 0;
+}
+.novel-list a {
+  text-decoration: none;
+  padding: 10px 20px;
+  background: var(--glass);
+  border-radius: 30px;
+  display: inline-block;
+  color: var(--text);
+  transition: background 0.3s ease, transform 0.2s ease;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+}
+.novel-list a:hover {
+  background: var(--primary);
+  color: white;
+  transform: translateY(-3px);
+}
+
 </style>
 </head>
 <body>
@@ -128,6 +160,17 @@
 
 <div class="social-media">
   <a href="https://instagram.com/username" target="_blank">📷 Instagram @username</a>
+</div>
+
+<div class="novel-list">
+<h2>Daftar Novel</h2>
+<ul>
+<li><a href="novel1.html">Kisah Bintang Jatuh</a></li>
+<li><a href="novel2.html">Petualangan di Dunia Fantasi</a></li>
+<li><a href="novel3.html">Rahasia Taman Bunga</a></li>
+<li><a href="novel4.html">Surat dari Masa Depan</a></li>
+<li><a href="novel5.html">Melodi Hati</a></li>
+</ul>
 </div>
 
 </main>
