--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Novel Kawaii | Fantasy World</title>
+  <title>Fathurkazama | Fantasy World</title>
   <link rel="manifest" href="manifest.json">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap');
@@ -139,15 +139,15 @@
 </head>
 <body>
 <header>
-  <h1>Novel Kawaii</h1>
+  <h1>Fathur | OpenBook</h1>
   <button class="toggle-theme" onclick="toggleDarkMode()"></button>
 </header>
 <main>
   <div class="profile">
     <img src="icon-192x192.png" alt="Avatar">
-    <h2>✨ Fathur ✨</h2>
+    <h2>✨ fathurkazama ✨</h2>
     <p>belajar melalui genangan air 🌸</p>
-    <a href="about.html" class="about-btn">Tentang Aku 🌸</a>
+    <a href="about.html" class="about-btn">Tentang Gua 🌸</a>
   </div>
   <a href="baca.html" class="novel-card">
     <h3>🌸 Judul Novel 1</h3>
@@ -157,9 +157,13 @@
     <h3>🌼 Judul Novel 2</h3>
     <p>Kisah cinta rahasia di antara para penyihir dan makhluk ajaib.</p>
   </a>
+  <a href="baca.html" class="novel-card">
+    <h3>🌸 Judul Novel 1</h3>
+    <p>Petualangan lucu dan menegangkan di dunia fantasi yang penuh keajaiban.</p>
+  </a>
 
 <div class="social-media">
-  <a href="https://instagram.com/username" target="_blank">📷 Instagram @username</a>
+  <a href="https://instagram.com/lilhajime" target="_blank">📷 Instagram @lilhajime</a>
 </div>
 
 <div class="novel-list">
@@ -174,7 +178,7 @@
 </div>
 
 </main>
-<footer>&copy; 2025 Novel Kawaii | All rights reserved</footer>
+<footer>&copy; 2025 Fathurkazama | All rights reserved</footer>
 <script>
   function toggleDarkMode() { const current = document.documentElement.getAttribute('data-theme'); const next = current === 'dark' ? 'light' : 'dark'; document.documentElement.setAttribute('data-theme', next); localStorage.setItem('theme', next); }
   (function () { const saved = localStorage.getItem('theme') || 'light'; document.documentElement.setAttribute('data-theme', saved); })();
