--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tentang Aku | Novel Kawaii</title>
+  <title>Tentang Aku | OpenBook</title>
   <style>
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500;700&family=Nunito:wght@300;600&display=swap');
 :root {
@@ -33,8 +33,9 @@ p { color: var(--text-light); line-height: 1.8; margin-bottom: 20px; }
   <a href="index.html">Home</a>
 </header>
 <main>
-  <h2>✨ Fathur ✨</h2>
-  <p>Hai! Aku Fathur, seseorang yang suka membaca dan menulis cerita fantasi kawaii. Aku percaya bahwa dunia imajinasi bisa menjadi tempat kita berpetualang tanpa batas.</p>
+  <h2>✨ My Profile ✨</h2>
+  <p>Hai! Aku Fathur, Imam Fathur Riziki, seseorang yang suka menulis, umurku 19 tahun, Aku menggunakan iphone 8 untuk mengerjakan semua ini. 
+Aku menyukai Midwest, Fantasy World, Regalia, atau yang berbau Imajinasi, Aku percaya bahwa dunia imajinasi bisa menjadi tempat kita berpetualang tanpa batas.</p>
   <p>Motto-ku adalah <i>"belajar melalui genangan air"</i>, karena setiap langkah kecil akan membawa kita ke samudra ilmu yang luas.</p>
   <a class="back-btn" href="index.html">Kembali ke Beranda</a>
 </main>
