--- a/about.html
+++ b/about.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -16,15 +15,38 @@
   --text-light: #555;
 }
 * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Quicksand', 'Nunito', sans-serif; }
-body { background: var(--bg); min-height: 100vh; padding: 20px; }
-header { padding: 15px 30px; display: flex; justify-content: space-between; align-items: center; background: var(--glass); border-radius: 20px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); margin-bottom: 30px; }
+body { background: var(--bg); min-height: 100vh; padding: 20px; display: flex; flex-direction: column; align-items: center; }
+header { padding: 15px 30px; display: flex; justify-content: space-between; align-items: center; background: var(--glass); border-radius: 20px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); margin-bottom: 30px; width: 100%; max-width: 900px; }
 header h1 { color: var(--primary); font-weight: 700; font-size: 24px; }
 a { text-decoration: none; color: var(--primary); font-weight: 600; }
-main { padding: 20px; background: var(--glass); border-radius: 20px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); }
+main { padding: 20px; background: var(--glass); border-radius: 20px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); width: 100%; max-width: 900px; }
 h2 { color: var(--primary); margin-bottom: 15px; }
 p { color: var(--text-light); line-height: 1.8; margin-bottom: 20px; }
-.back-btn { display: inline-block; padding: 10px 20px; background: var(--secondary); color: white; border-radius: 30px; transition: background 0.3s ease; }
+.back-btn { display: inline-block; padding: 10px 20px; background: var(--secondary); color: white; border-radius: 30px; transition: background 0.3s ease; text-align: center; }
 .back-btn:hover { background: var(--primary); }
+
+/* Spotify Player Styling */
+.spotify-player {
+  margin: 30px auto;
+  width: 100%;
+  max-width: 700px;
+  border-radius: 20px;
+  overflow: hidden;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+  border: 3px solid var(--secondary);
+}
+
+/* Gambar Profil Kotak */
+.profile-img {
+  width: 250px;
+  height: 250px;
+  object-fit: cover;
+  border: 5px solid var(--secondary);
+  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+  display: block;
+  margin: 20px auto;
+  border-radius: 10px; /* Boleh ubah ke 0px jika mau kotak murni */
+}
 </style>
 </head>
 <body>
@@ -32,12 +54,25 @@ p { color: var(--text-light); line-height: 1.8; margin-bottom: 20px; }
   <h1>🌸 Tentang Aku</h1>
   <a href="index.html">Home</a>
 </header>
+
 <main>
-  <h2>✨ My Profile ✨</h2>
-  <p>Hai! Aku Fathur, Imam Fathur Riziki, seseorang yang suka menulis, umurku 19 tahun, Aku menggunakan iphone 8 untuk mengerjakan semua ini. 
-Aku menyukai Midwest, Fantasy World, Regalia, atau yang berbau Imajinasi, Aku percaya bahwa dunia imajinasi bisa menjadi tempat kita berpetualang tanpa batas.</p>
+  <h2>✨ My profile ✨</h2>
+
+  <!-- Gambar Profil Kotak -->
+  <img src="https://via.placeholder.com/250" alt="Foto Profil Fathur" class="profile-img">
+
+  <p>Hai! Aku Fathur, Imam Fathur Riziki, seseorang yang suka menulis, umurku 19 tahun. Aku menggunakan iPhone 8 untuk mengerjakan semua ini. 
+Aku menyukai Midwest, Fantasy World, Regalia, atau yang berbau Imajinasi. Aku percaya bahwa dunia imajinasi bisa menjadi tempat kita berpetualang tanpa batas.</p>
   <p>Motto-ku adalah <i>"belajar melalui genangan air"</i>, karena setiap langkah kecil akan membawa kita ke samudra ilmu yang luas.</p>
+  <p>Oh iya, aku juga merilis lagu di platform Spotify, dengerin yaa, siapa tau cocok hehe.</p>
+
+  <!-- Spotify Embed -->
+  <div class="spotify-player">
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/1kBebkniXu8GXw3doEismT?utm_source=generator" width="100%" height="152" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+  </div>
+
   <a class="back-btn" href="index.html">Kembali ke Beranda</a>
 </main>
+
 </body>
 </html>
