--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -139,15 +140,15 @@
 </head>
 <body>
 <header>
-  <h1>Fathur | OpenBook</h1>
+  <h1>Hello World!</h1>
   <button class="toggle-theme" onclick="toggleDarkMode()"></button>
 </header>
 <main>
   <div class="profile">
     <img src="icon-192x192.png" alt="Avatar">
-    <h2>✨ fathurkazama ✨</h2>
-    <p>belajar melalui genangan air 🌸</p>
-    <a href="about.html" class="about-btn">Tentang Gua 🌸</a>
+    <h2>✨ My Open Book ✨</h2>
+    <p>my brain, but make it public.</p>
+    <a href="about.html" class="about-btn">Tentang Aku</a>
   </div>
   <a href="baca.html" class="novel-card">
     <h3>🌸 Judul Novel 1</h3>
@@ -167,7 +168,7 @@
 </div>
 
 <div class="novel-list">
-<h2>Daftar Novel</h2>
+<h2>Text Motivation</h2>
 <ul>
 <li><a href="novel1.html">Kisah Bintang Jatuh</a></li>
 <li><a href="novel2.html">Petualangan di Dunia Fantasi</a></li>
