--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@ p { color: var(--text-light); line-height: 1.8; margin-bottom: 20px; }
   <h2>✨ My profile ✨</h2>
 
   <!-- Gambar Profil Kotak -->
-  <img src="https://via.placeholder.com/250" alt="Foto Profil Fathur" class="profile-img">
+  <img src="/icon-512x512.png" alt="Foto Profil Fathur" class="profile-img">
 
   <p>Hai! Aku Fathur, Imam Fathur Riziki, seseorang yang suka menulis, umurku 19 tahun. Aku menggunakan iPhone 8 untuk mengerjakan semua ini. 
 Aku menyukai Midwest, Fantasy World, Regalia, atau yang berbau Imajinasi. Aku percaya bahwa dunia imajinasi bisa menjadi tempat kita berpetualang tanpa batas.</p>
