--- a/about.html
+++ b/about.html
@@ -61,10 +61,9 @@ p { color: var(--text-light); line-height: 1.8; margin-bottom: 20px; }
   <!-- Gambar Profil Kotak -->
   <img src="/icon-512x512.png" alt="Foto Profil Fathur" class="profile-img">
 
-  <p>Hai! Aku Fathur, Imam Fathur Riziki, seseorang yang suka menulis, umurku 19 tahun. Aku menggunakan iPhone 8 untuk mengerjakan semua ini. 
-Aku menyukai Midwest, Fantasy World, Regalia, atau yang berbau Imajinasi. Aku percaya bahwa dunia imajinasi bisa menjadi tempat kita berpetualang tanpa batas.</p>
+  <p>Hai! Aku Fathur, seseorang yang suka menulis, umurku 19 tahun. Aku menyukai Midwest, Fantasy World, Regalia. Aku percaya bahwa dunia imajinasi bisa menjadi tempat kita berpetualang tanpa batas.</p>
   <p>Motto-ku adalah <i>"belajar melalui genangan air"</i>, karena setiap langkah kecil akan membawa kita ke samudra ilmu yang luas.</p>
-  <p>Oh iya, aku juga merilis lagu di platform Spotify, dengerin yaa, siapa tau cocok hehe.</p>
+  <p>Aku punya hobi menyanyi meskipun suaraku gaenak, Hobi ngoding meskipun skill pas-pasan, Hobi isengin orang meskipun aku gamau di isengin. Oh iya, aku juga merilis lagu di platform Spotify, dengerin yaa, siapa tau cocok hehe.</p>
 
   <!-- Spotify Embed -->
   <div class="spotify-player">
