--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 </header>
 <main>
   <div class="profile">
-    <img src="/icon-192x192.heic" alt="Avatar">
+    <img src="/icon-192x192.png" alt="Avatar">
     <h2>✨ My Open Book ✨</h2>
     <p>my brain, but make it public.</p>
     <a href="about.html" class="about-btn">Tentang Aku</a>
